tooling/nargo_cli/tests/snapshots/execution_success/regression_9578/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
(1, &mut (), ())
(2, &mut 0x7b, 0x7b)
(3, &mut [0x01, 0x02, 0x03], [0x01, 0x02, 0x03])
(4, &mut (0x01, 0x02, 0x03), (0x01, 0x02, 0x03))
(5, &mut [(0x01, 0x02), (0x03, 0x04)], [(0x01, 0x02), (0x03, 0x04)])
(6, &mut ((0x01, 0x02), [0x03]), ((0x01, 0x02), [0x03]))
(7, &mut 123, 123)
(8, &mut (&mut (0x01, 0x02), 0x03), (&mut (0x01, 0x02), 0x03))
(9, &mut @[0x01, 0x02, 0x03], @[0x01, 0x02, 0x03])
(9, &mut @[(0x01, 0x02), (0x03, 0x04)], @[(0x01, 0x02), (0x03, 0x04)])
(10, &mut Foo { a: 1, b: (true, [3, 4]), c: [5, 6, 7] }, Foo { a: 1, b: (true, [3, 4]), c: [5, 6, 7] })
(11, &mut Bar::Baz((1, [2, 3])), Bar::Baz((1, [2, 3])))
(14, &mut WithRef { a: &mut 12, b: 15 }, WithRef { a: &mut 12, b: 15 })
(16, &mut [&mut 12, &mut 13], [&mut 12, &mut 13])
